--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,18 @@
         android:theme="@style/Theme.UNII"
         tools:targetApi="31">
         <activity
+            android:exported="true"
             android:name=".MainActivity"
-            android:exported="true">
+        >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category  android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.DEFAULT" />
+
             </intent-filter>
+
         </activity>
     </application>
 
